# decklet

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
crates/decklet-core/: Cargo.toml
crates/decklet-core/fixtures/: minimal.v1.json  runtime-capability-demo.v1.json
crates/decklet-core/src/: contract.rs  lib.rs
crates/decklet-demo/: Cargo.toml
crates/decklet-demo/src/: lib.rs  main.rs
crates/decklet-host-sdl/: Cargo.toml
crates/decklet-host-sdl/src/: lib.rs
docs/: guest-app-staging.md  scene-snapshot-contract-v1.md
docs/adr/: 0001-use-scene-snapshots-for-host-guest-boundary.md  0002-stage-native-sdl-host-before-quickjs.md  0003-use-strict-scene-snapshot-contract-v1.md
docs/agents/: domain.md  issue-tracker.md
