[workspace]
members = [
    "crates/decklet-core",
    "crates/decklet-demo",
    "crates/decklet-host-sdl",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
decklet-core = { path = "crates/decklet-core" }
decklet-host-sdl = { path = "crates/decklet-host-sdl" }
libloading = "0.8"
sdl2 = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
